--- a/views/header.html
+++ b/views/header.html
@@ -6,6 +6,7 @@
 	        <li><a class="js-nav" href="/{{lang}}/booking">{{#__}}booking{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/gallery">{{#__}}gallery{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/rates">{{#__}}rates{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/services">{{#__}}services{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/location">{{#__}}location{{/__}}</a>
 	        <li><a class="js-nav" href="/{{lang}}/contact">{{#__}}contact{{/__}}</a>
 	        <li class="nav-dropdown"><a href="#lang-menu">{{#__}}language{{/__}}</a>
