--- a/public/css/general-form.css
+++ b/public/css/general-form.css
@@ -4,17 +4,6 @@
 	white-space: nowrap;
 }
 
-.input-prepend .add-on, .input-prepend .btn {
-	margin-right: -1px;
-}
-
-.input-append .add-on, .input-prepend .add-on, .input-append .btn, .input-prepend .btn {
-	vertical-align: top;
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-}
-
 .input-append .add-on, .input-prepend .add-on {
 	display: inline-block;
 	width: auto;
@@ -22,10 +11,7 @@
 	min-width: 16px;
 	padding: 4px 5px;
 	font-size: 14px;
-	font-weight: normal;
-	line-height: 20px;
 	text-align: center;
-	text-shadow: 0 1px 0 #ffffff;
 	background-color: #eeeeee;
 	border: 1px solid #ccc;
 }
@@ -42,14 +28,12 @@
 	margin-top: 1px;
 }
 
-span.input-prepend input {
-    width: calc(100% - 28px);
-}
-
 .input-append input, .input-prepend input, .input-append select, .input-prepend select, .input-append .uneditable-input, .input-prepend .uneditable-input {
     position: relative;
-    margin-bottom: 0;
+    margin: 0;
     font-size: 14px;
+    line-height: 30px;
+    height: 30px;
     vertical-align: top;
     -webkit-border-radius: 0 3px 3px 0;
     -moz-border-radius: 0 3px 3px 0;
@@ -62,10 +46,6 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    -webkit-transition: border linear .2s, box-shadow linear .2s;
-    -moz-transition: border linear .2s, box-shadow linear .2s;
-    -o-transition: border linear .2s, box-shadow linear .2s;
-    transition: border linear .2s, box-shadow linear .2s;
 }
 
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
@@ -85,11 +65,6 @@ input, textarea, select, .uneditable-input {
     margin-bottom: 0;
 }
 
-@media (min-width: 1200px)
-input, textarea, .uneditable-input {
-    margin-left: 0;
-}
-
 input, textarea, .uneditable-input {
     margin-left: 0;
 }
@@ -106,6 +81,18 @@ textarea {
 	background-position: -72px 0;
 }
 
+.icon-home {
+	background-position: 0 -24px;
+}
+
+.icon-calendar {
+	background-position: -192px -120px;
+}
+
+.icon-resize-horizontal {
+	background-position: -456px -118px;
+}
+
 #submit-success:target,
 #submit-fail:target {
 	display: block;
@@ -113,6 +100,25 @@ textarea {
 
 .submit-states {
 	display: none;
+}
+
+.input-prepend input {
+    	width: -moz-calc(100% - 42px);
+	width: -webkit-calc(100% - 42px);
+	width: calc(100% - 42px);
+}
+
+.add-on + select,
+.add-on + input {
+	border-left: 0;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.add-on {
+	border-left: 3px;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
 }
 
 .get-value {
