--- a/views/basicform.html
+++ b/views/basicform.html
@@ -1,16 +1,18 @@
-<p>{{#__}}yourname{{/__}} ({{#__}}required{{/__}})<span class="input-prepend"><br>
-        <span class="add-on"><i class="icon-user"></i></span></span>
-        <input class="get-value" type="text" name="username" value="" size="40" aria-required="true" aria-invalid="false">
+{{#__}}yourname{{/__}} ({{#__}}required{{/__}})
+<p class="input-prepend">
+        <span class="add-on"><i class="icon-user"></i></span>
+        <input class="get-value" type="text" name="username" value="" size="40" required aria-required="true">
 </p>
-<p>{{#__}}youremail{{/__}} ({{#__}}required{{/__}})<span class="input-prepend"><br>
-        <span class="add-on"><i class="icon-envelope"></i></span></span>
-        <input class="get-value" type="email" name="useremail" value="" size="40" aria-required="true" aria-invalid="false">
+{{#__}}youremail{{/__}} ({{#__}}required{{/__}})
+<p class="input-prepend">
+        <span class="add-on"><i class="icon-envelope"></i></span>
+        <input class="get-value" type="email" name="useremail" value="" size="40" required aria-required="true">
 </p>
 <p>{{#__}}Subject{{/__}}
         <br>
-        <input class="get-value" type="text" name="subject" value="" size="40" aria-invalid="false">
+        <input class="get-value" type="text" name="subject" value="" size="40">
 </p>
 <p>{{#__}}yourmessage{{/__}}
         <br>
-        <textarea class="get-value" name="message" cols="40" rows="10" aria-invalid="false"></textarea>
+        <textarea class="get-value" name="message" cols="40" rows="10"></textarea>
 </p>
