--- a/views/contact.html
+++ b/views/contact.html
@@ -15,4 +15,4 @@
         {{> submit}}
     </form>
 </div>
-<script src="/../js/basic_form.js"></script>
+<script src="/../js/basic-form.js"></script>
