--- a/views/location.html
+++ b/views/location.html
@@ -21,4 +21,4 @@
     </div>
 </div>
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="/../js/g_map.js"></script>
+<script src="/../js/g-map.js"></script>
