--- a/views/email.html
+++ b/views/email.html
@@ -1,3 +1,6 @@
 {{#username}}<p>Име: {{username}}</p>{{/username}}
 {{#useremail}}<p>Email: {{useremail}}</p>{{/useremail}}
+{{#flatselection}}<p>Email: {{flatselection}}</p>{{/flatselection}}
+{{#startdate}}<p>Email: {{startdate}}</p>{{/startdate}}
+{{#duration}}<p>Email: {{duration}}</p>{{/duration}}
 {{#message}}<p>Съобщение: {{message}}</p>{{/message}}
