--- a/views/basicform.html
+++ b/views/basicform.html
@@ -1,18 +1,25 @@
-{{#__}}yourname{{/__}} ({{#__}}required{{/__}})
+<label>{{#__}}yourname{{/__}} ({{#__}}required{{/__}})
 <p class="input-prepend">
         <span class="add-on"><i class="icon-user"></i></span>
         <input class="get-value" type="text" name="username" value="" size="40" required aria-required="true">
 </p>
+</label>
+<label>
 {{#__}}youremail{{/__}} ({{#__}}required{{/__}})
 <p class="input-prepend">
         <span class="add-on"><i class="icon-envelope"></i></span>
         <input class="get-value" type="email" name="useremail" value="" size="40" required aria-required="true">
 </p>
+</label>
+<label>
 <p>{{#__}}Subject{{/__}}
         <br>
         <input class="get-value" type="text" name="subject" value="" size="40">
 </p>
+</label>
+<label>
 <p>{{#__}}yourmessage{{/__}}
         <br>
         <textarea class="get-value" name="message" cols="40" rows="10"></textarea>
 </p>
+<label>
