--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <section class="row-fluid">
-    <h2><span class="capitalise">{{#__}}awarmwelcome{{/__}}</h2>
+    <h2>{{#__}}awarmwelcome{{/__}}</h2>
     <p>{{#__}}homemaindesc{{/__}}</p>
 </section>
 <div class="row-fluid">
