--- a/views/rates.html
+++ b/views/rates.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <section class="row-fluid">
-    <h2><span class="capitalise">{{#__}}prices{{/__}}</h2>
+    <h2>{{#__}}prices{{/__}}</h2>
     <p>{{#__}}ratesmaindesc{{/__}}</p>
 </section>
 <div class="row-fluid">
@@ -20,7 +20,7 @@
                 <th>{{#__}}ratestblth4{{/__}}</th>
             </tr>
         </thead>
-        <tbody class="capitalise">
+        <tbody>
             <tr>
                 <td data-th="{{#__}}ratestblth1{{/__}}">2</td>
                 <td data-th="{{#__}}ratestblth2{{/__}}">{{#__}}flexible{{/__}}</td>
