Added bg translation - unfinished.

--- a/views/location.html
+++ b/views/location.html
@@ -13,7 +13,7 @@
     <div id="map-container">
         <div id="map-canvas">
             <noscript>
-                <img src="/images/960x340/15.jpg" alt="Bird's eye Albena map"/>
+                <img src="/images/map/Albena-Fish-Fish-Bird-View-Map-Pin.png" alt="Bird's eye Albena map"/>
             </noscript>
         </div>
         <button class="btn btn-primary" type="button" id="route-btn" data-states='["{{#__}}suggestaroute{{/__}}", "{{#__}}returntotheoriginalmap{{/__}}"]'>{{#__}}suggestaroute{{/__}}</button>
