--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,7 +84,69 @@ nav.contact li:nth-child(7) a {
 	color: white;
 }
 
-@media (max-width: 650px) {
+.navbar-handle,
+.navbar-handle:before {
+	position: absolute;
+	border-bottom: .8ex solid #0088cc;
+}
+
+.navbar-handle {
+	display: none;
+	cursor: pointer;
+	right: 0;
+	margin: 1.5ex 1em;
+	padding: .5em 0;
+	width: 2em;
+	height: 1ex;
+} 
+
+.navbar-handle:before {
+	content: "";
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: .6ex;
+	border-top: .8ex solid #0088cc;
+}
+
+footer,
+#yield {
+	max-width: 970px;
+	margin: 0 auto;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.span4 {
+	display: inline-block;
+	box-sizing: border-box;
+	vertical-align: top;
+	width: 33%;
+}
+
+.span4 p {
+	padding: 1ex 1em;
+}
+
+footer,
+.row-fluid {
+	margin-bottom: 2ex;
+}
+
+h2.row-fluid {
+	margin-top: 3ex;
+}
+
+@media (max-width: 978px) {
+	.row-fluid .span4 {
+		width: 49%;
+	}
+}
+
+@media (max-width: 768px) {
+	.row-fluid .span4 {
+		width: 100%;
+	}
 
 	h1 {
 		margin-top: 4ex;
@@ -130,65 +192,6 @@ nav.contact li:nth-child(7) a {
 
 	nav.home ul li a:hover {
 		color: #0088cc;
-	}
-}
-
-.navbar-handle {
-	display: none;
-	cursor: pointer;
-	position: absolute;
-	right: 0;
-	margin: 1.5ex 1em;
-	padding: .5em 0;
-	width: 2em;
-	height: 1ex;
-  	background: linear-gradient(to bottom,
-  		#0088cc, #0088cc 20%, 
-		white 20%, white 40%, 
-		#0088cc 40%, #0088cc 60%, 
-		white 60%, white 80%, 
-		#0088cc 80%, #0088cc 100%
- 	);
- 	background: url("menu-btn.svg")\9;
-}
-
-footer,
-#yield {
-	max-width: 970px;
-	margin: 0 auto;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.span4 {
-	display: inline-block;
-	box-sizing: border-box;
-	vertical-align: top;
-	width: 33%;
-}
-
-.span4 p {
-	padding: 1ex 1em;
-}
-
-footer,
-.row-fluid {
-	margin-bottom: 2ex;
-}
-
-h2.row-fluid {
-	margin-top: 3ex;
-}
-
-@media (max-width: 978px) {
-	.row-fluid .span4 {
-		width: 49%;
-	}
-}
-
-@media (max-width: 767px) {
-	.row-fluid .span4 {
-		width: 100%;
 	}
 }
 
@@ -367,10 +370,44 @@ input[type="submit"],
 	margin: 1ex 0;
 }
 
+.no-js #map-canvas {
+	height: auto;
+}
+
+.no-js #map-canvas img {
+	width: 100%;
+	height: auto;
+}
+
 button,
 input[type="submit"] {
 	border: 0;
 	padding: 1ex 1em;
 	margin: 1ex 0;
 	text-transform: uppercase;
+}
+
+.dl-horizontal dt {
+	font-weight: bold;
+}
+
+.dl-horizontal dd {
+	margin-bottom: 1ex;
+}
+
+@media (min-width: 768px){
+	.dl-horizontal dt {
+		float: left;
+		width: 260px;
+		overflow: hidden;
+		clear: left;
+		text-align: right;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		
+	}
+
+	.dl-horizontal dd {
+		margin-left: 280px;
+	}
 }
