--- a/views/services.html
+++ b/views/services.html
@@ -5,5 +5,12 @@
 </div>
 <section class="row-fluid">
     	<h2>{{#__}}services{{/__}}</h2>
-	<p>{{#__}}servicesmaindesc{{/__}}</p>
+	<dl class="dl-horizontal">
+	      <dt>{{#__}}beachumbrellaandchairsetrentals{{/__}}</dt>
+	      <dd>{{#__}}beachumbrellaandchairdesc{{/__}}</dd>
+	      <dt>{{#__}}pickupservices{{/__}}</dt>
+	      <dd>{{#__}}pickupservicesdesc{{/__}}</dd>
+	      <dt>{{#__}}food&beverages{{/__}}</dt>
+	      <dd>{{#__}}food&beveragesdesc{{/__}}</dd>
+    	</dl>
 </section>
