--- a/views/basicform.html
+++ b/views/basicform.html
@@ -19,14 +19,14 @@
 </p>
 </label>
 <label>
-<p>{{#__}}Subject{{/__}}
+<div>{{#__}}subject{{/__}}
         <br>
         <input class="get-value" type="text" name="subject" value="" size="40">
-</p>
+</div>
 </label>
 <label>
-<p>{{#__}}yourmessage{{/__}}
+<div>{{#__}}yourmessage{{/__}}
         <br>
         <textarea class="get-value" name="message" cols="40" rows="10"></textarea>
-</p>
+</div>
 </label>
