--- a/views/diningphotos.html
+++ b/views/diningphotos.html
@@ -25,6 +25,26 @@
                 <img src="/images/dining300x300/4.jpg" alt="Restaurent Table 2"/>
             </div>
         </div>
+         <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/8.jpg" alt="Restaurant Flowers"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/9.jpg" alt="Indoor Fireplace"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/10.png" alt="Dinner is on the table"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/dining300x300/11.png" alt="Bar counter - table view"/>
+            </div>
+        </div>
         <div class="span4">
             <div class="img-polaroid">
                 <img src="/images/dining300x300/5.jpg" alt="Restaurant Counter and Bar"/>
@@ -40,14 +60,9 @@
                 <img src="/images/dining300x300/7.jpg" alt="Water Mill"/>
             </div>
         </div>
-         <div class="span4">
+        <div class="span4">
             <div class="img-polaroid">
-                <img src="/images/dining300x300/8.jpg" alt="Restaurant Flowers"/>
-            </div>
-        </div>
-         <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/dining300x300/9.jpg" alt="Indoor Fireplace"/>
+                <img src="/images/dining300x300/12.png" alt="Barbeque Roast"/>
             </div>
         </div>
 </div>
