--- a/views/home.html
+++ b/views/home.html
@@ -9,57 +9,57 @@
 </section>
 <div class="row-fluid">
     <section class="span4">
-        <a class="js-nav" href="/{{lang}}/booking">
+        <a class="js-nav" href="/{{lang}}/{{#__}}pagebooking{{/__}}">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/11.jpg" alt="Booking Calendar" />
             </div>
             <h3 class="pagination-centered">{{#__}}booking{{/__}}</h3>
         </a>
-        <p>{{#__}}homebooking{{/__}}<a class="js-nav" href="/{{lang}}/booking">{{#__}}___readmore{{/__}}</a></p>
+        <p>{{#__}}homebooking{{/__}}<a class="js-nav" href="/{{lang}}/{{#__}}pagebooking{{/__}}">{{#__}}___readmore{{/__}}</a></p>
     </section>
     <section class="span4">
-        <a class="js-nav" href="/{{lang}}/gallery">
+        <a class="js-nav" href="/{{lang}}/{{#__}}pagegallery{{/__}}">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/3.jpg" alt="Hotel Gallery" />
             </div>
             <h3 class="pagination-centered">{{#__}}gallery{{/__}}</h3>
         </a>
-        <p>{{#__}}homegallery{{/__}}<a class="js-nav" href="/{{lang}}/gallery">{{#__}}___readmore{{/__}}</a></p>
+        <p>{{#__}}homegallery{{/__}}<a class="js-nav" href="/{{lang}}/{{#__}}pagegallery{{/__}}">{{#__}}___readmore{{/__}}</a></p>
     </section>
     <section class="span4">
-        <a class="js-nav" href="/{{lang}}/rates">
+        <a class="js-nav" href="/{{lang}}/{{#__}}pagerates{{/__}}">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/13.jpg" alt="Rates and Prices"/>
             </div>
             <h3 class="pagination-centered">{{#__}}prices{{/__}}</h3>
         </a>
-        <p>{{#__}}homeprices{{/__}}<a class="js-nav" href="/{{lang}}/rates">{{#__}}___readmore{{/__}}</a></p>
+        <p>{{#__}}homeprices{{/__}}<a class="js-nav" href="/{{lang}}/{{#__}}pagerates{{/__}}">{{#__}}___readmore{{/__}}</a></p>
     </section>
     <section class="span4">
-        <a class="js-nav" href="/{{lang}}/location">
+        <a class="js-nav" href="/{{lang}}/{{#__}}pagelocation{{/__}}">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/12.jpg" alt="Hotel Location"/>
             </div>
             <h3 class="pagination-centered">{{#__}}location{{/__}}</h3>
         </a>
-        <p>{{#__}}homelocation{{/__}}<a class="js-nav" href="/{{lang}}/location">{{#__}}___readmore{{/__}}</a></p>
+        <p>{{#__}}homelocation{{/__}}<a class="js-nav" href="/{{lang}}/{{#__}}pagelocation{{/__}}">{{#__}}___readmore{{/__}}</a></p>
     </section>
     <section class="span4">
-        <a class="js-nav" href="/{{lang}}/location">
+        <a class="js-nav" href="/{{lang}}/{{#__}}pageservices{{/__}}">
             <div class="img-polaroid">
-                <img src="/images/hotel300x300/14.jpg" alt="Hotel Blog"/>
+                <img src="/images/hotel300x300/14.jpg" alt="Hotel Services"/>
             </div>
-            <h3 class="pagination-centered">{{#__}}blog{{/__}}</h3>
+            <h3 class="pagination-centered">{{#__}}services{{/__}}</h3>
         </a>
-        <p>{{#__}}homeblog{{/__}}<a class="js-nav" href="/{{lang}}/blog">{{#__}}___readmore{{/__}}</a></p>
+        <p>{{#__}}homeservices{{/__}}<a class="js-nav" href="/{{lang}}/{{#__}}pageservices{{/__}}">{{#__}}___readmore{{/__}}</a></p>
     </section>
     <section class="span4">
-        <a class="js-nav" href="/{{lang}}/contact">
+        <a class="js-nav" href="/{{lang}}/{{#__}}pagecontact{{/__}}">
             <div class="img-polaroid">
                 <img src="/images/hotel300x300/15.jpg" alt="Contact Us"/>
             </div>
             <h3 class="pagination-centered">{{#__}}contact{{/__}}</h3>
         </a>
-        <p>{{#__}}homecontact{{/__}}<a class="js-nav" href="/{{lang}}/contact">{{#__}}___readmore{{/__}}</a></p>
+        <p>{{#__}}homecontact{{/__}}<a class="js-nav" href="/{{lang}}/{{#__}}pagecontact{{/__}}">{{#__}}___readmore{{/__}}</a></p>
     </section>
 </div>
