--- a/views/layout.html
+++ b/views/layout.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="description" content="">
         <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-        <title>House Seasons</title>
+        <title>{{title}}</title>
         <link href="/css/styles.css" rel="stylesheet" type="text/css">
         {{#cssList}}
         <link href="/css/{{.}}.css" rel="stylesheet" type="text/css">
