--- a/views/services.html
+++ b/views/services.html
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="img-polaroid img-polaroid-main">
-        <img src="/images/960x340/7.jpg" alt="Garden Flower Pot"/>
+        <img src="/images/960x340/9.jpg" alt="Water mill in the rear area"/>
     </div>
 </div>
 <section class="row-fluid">
