--- a/views/submit.html
+++ b/views/submit.html
@@ -1,4 +1,4 @@
-<input id="submit-button" type="submit" value="Send">
+<input id="submit-button" type="submit" value="{{#__}}send{{/__}}">
 <span id="submit-pending">{{#__}}sending__{{/__}}</span>
 <div id="reset-form">{{#__}}OK{{/__}}</div>
 <span id="submit-success">{{#__}}messagesentsuccessfully{{/__}}</span>
