--- a/views/header.html
+++ b/views/header.html
@@ -3,12 +3,12 @@
 	<nav id="main-nav" class="{{currentpage}}">
 	    <ul>
 	        <li><a class="js-nav" href="/{{lang}}/">{{#__}}home{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/booking">{{#__}}booking{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/gallery">{{#__}}gallery{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/services">{{#__}}services{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/rates">{{#__}}rates{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/location">{{#__}}location{{/__}}</a>
-	        <li><a class="js-nav" href="/{{lang}}/contact">{{#__}}contact{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagebooking{{/__}}">{{#__}}booking{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagegallery{{/__}}">{{#__}}gallery{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pageservices{{/__}}">{{#__}}services{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagerates{{/__}}">{{#__}}rates{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagelocation{{/__}}">{{#__}}location{{/__}}</a>
+	        <li><a class="js-nav" href="/{{lang}}/{{#__}}pagecontact{{/__}}">{{#__}}contact{{/__}}</a>
 	        <li class="nav-dropdown"><a href="#lang-menu">{{#__}}language{{/__}}</a>
 	    </ul>
 	    <label for="navbar-checkbox" class="navbar-handle"></label>
