--- a/views/hotelphotos.html
+++ b/views/hotelphotos.html
@@ -1,6 +1,6 @@
 <div class="row-fluid">
     <div class="img-polaroid img-polaroid-main">
-        <img src="/images/960x340/4.jpg" alt="Hotel Entrance" />
+        <img src="/images/960x340/4.jpg" alt="Children in traditional bulgarian dress" />
     </div>
 </div>
 <h2 class="row-fluid">{{#__}}exteriorinteriorphotos{{/__}}</h2>
@@ -35,4 +35,49 @@
                 <img src="/images/hotel300x300/6.jpg" alt="Standalone Flat staircase"/>
             </div>
         </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/7.jpg" alt="Flats from outside - Left Angle"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/8.jpg" alt="Flats from outside - Right Angle"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/9.jpg" alt="Hotel - Front view"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/16.jpg" alt="Standalone Flat very close view"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/17.png" alt="Hotel Street view - Right Angle"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/20.png" alt="Children in traditional folklore colthes"/>
+            </div>
+        </div>
+         <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/18.png" alt="Rear garden lawn"/>
+            </div>
+        </div>
+         <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/21.png" alt="Stone walkaway to the rear garden"/>
+            </div>
+        </div>
+        <div class="span4">
+            <div class="img-polaroid">
+                <img src="/images/hotel300x300/22.png" alt="Front garden - lamp post"/>
+            </div>
+        </div
 </div>
