--- a/views/contact.html
+++ b/views/contact.html
@@ -1,3 +1,11 @@
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=164598596901922&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="row-fluid">
     <div class="img-polaroid img-polaroid-main">
         <img src="/images/960x340/13.jpg" alt="Garden Flower Pot"/>
@@ -15,4 +23,5 @@
         {{> submit}}
     </form>
 </div>
+<div class="fb-like-box" data-href="https://www.facebook.com/pages/%D0%9A%D1%8A%D1%89%D0%B0-%D0%B7%D0%B0-%D0%B3%D0%BE%D1%81%D1%82%D0%B8-%D0%A1%D0%95%D0%97%D0%9E%D0%9D%D0%98-%D0%BA%D0%BA%D0%90%D0%BB%D0%B1%D0%B5%D0%BD%D0%B0/1405059436417534" data-width="300" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
 <script src="/../js/basic-form.js"></script>
