--- a/views/contact.html
+++ b/views/contact.html
@@ -1,27 +1,37 @@
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=164598596901922&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 <div class="row-fluid">
     <div class="img-polaroid img-polaroid-main">
         <img src="/images/960x340/13.jpg" alt="Garden Flower Pot"/>
     </div>
 </div>
 <section class="row-fluid">
-    <h2>{{#__}}contact{{/__}}</h2>
-    <p>
-        {{#__}}contactmaindesc{{/__}}
-    </p>
+  <h2>{{#__}}contact{{/__}}</h2>
+  <p>
+      {{#__}}contactmaindesc{{/__}}
+  </p>
+  <form method="post">
+      {{> basicform}}
+      {{> submit}}
+  </form>
+  <div class="span5 contact-details">
+    <h2>{{#__}}contactdetails{{/__}}</h2>
+    <div itemscope itemtype="http://schema.org/Person">
+        <span itemprop="jobTitle">{{#__}}Hotel Owner{{/__}}: </span>
+        <span itemprop="name">{{#__}}kiriltrifonov{{/__}}</span>
+    </div>
+    <address itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+        <span>{{#__}}housenumber{{/__}}: 47</span><br>
+        <span>{{#__}}street{{/__}}: </span><span itemprop="streetAddress">3 {{#__}}Street{{/__}}</span><br>
+        <span>{{#__}}place{{/__}}: </span><span itemprop="addressLocality">{{#__}}Albena{{/__}}</span><br>
+        <span>{{#__}}region{{/__}}: </span><span itemprop="addressRegion">{{#__}}Dobrich{{/__}}</span><br>
+        <span>{{#__}}country{{/__}}: </span><span itemprop="addressCountry">{{#__}}Bulgaria{{/__}}</span><br>
+        <span>{{#__}}telephone{{/__}}: </span><a href="tel:+359 888731414" itemprop="telephone">+359 888 73 14 14</a><br>
+        <span>{{#__}}email{{/__}}: </span><a href="mailto:kontakti@house-sezoni.com" itemprop="email">kontakti@house-sezoni.com</a>
+    </address>
+  </div>
+  <div class="span5 fb-holder">
+    <div class="fb-like-box" data-href="https://www.facebook.com/pages/%D0%9A%D1%8A%D1%89%D0%B0-%D0%B7%D0%B0-%D0%B3%D0%BE%D1%81%D1%82%D0%B8-%D0%A1%D0%95%D0%97%D0%9E%D0%9D%D0%98-%D0%BA%D0%BA%D0%90%D0%BB%D0%B1%D0%B5%D0%BD%D0%B0/1405059436417534" data-width="300" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+  </div>
 </section>
-<div class="row-fluid">
-    <form method="post">
-        {{> basicform}}
-        {{> submit}}
-    </form>
-</div>
-<div class="fb-like-box" data-href="https://www.facebook.com/pages/%D0%9A%D1%8A%D1%89%D0%B0-%D0%B7%D0%B0-%D0%B3%D0%BE%D1%81%D1%82%D0%B8-%D0%A1%D0%95%D0%97%D0%9E%D0%9D%D0%98-%D0%BA%D0%BA%D0%90%D0%BB%D0%B1%D0%B5%D0%BD%D0%B0/1405059436417534" data-width="300" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+<script src="/../js/fb-like-box.js"></script>
 <script src="/../js/basic-form.js"></script>
