--- a/views/flat1photos.html
+++ b/views/flat1photos.html
@@ -4,35 +4,35 @@
     </div>
 </div>
 <h2 class="row-fluid">{{#__}}flat1photos{{/__}}</h2>
-<div class="row-fluid">
-        <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/1flat300x300/1.jpg" alt="Double Bed" />
-            </div>
+<figure class="row-fluid">
+    <div class="span4">
+        <div class="img-polaroid">
+            <img src="/images/1flat300x300/1.jpg" alt="Double Bed" />
         </div>
-        <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/1flat300x300/2.jpg" alt="Entrance View"/>
-            </div>
+    </div>
+    <div class="span4">
+        <div class="img-polaroid">
+            <img src="/images/1flat300x300/2.jpg" alt="Entrance View"/>
         </div>
-        <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/1flat300x300/3.jpg" alt="Mirror and TV Set"/>
-            </div>
+    </div>
+    <div class="span4">
+        <div class="img-polaroid">
+            <img src="/images/1flat300x300/3.jpg" alt="Mirror and TV Set"/>
         </div>
-        <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/1flat300x300/4.jpg" alt="Sofa and Windows"/>
-            </div>
+    </div>
+    <div class="span4">
+        <div class="img-polaroid">
+            <img src="/images/1flat300x300/4.jpg" alt="Sofa and Windows"/>
         </div>
-        <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/1flat300x300/5.jpg" alt="Bathroom Mirror and Sink"/>
-            </div>
+    </div>
+    <div class="span4">
+        <div class="img-polaroid">
+            <img src="/images/1flat300x300/5.jpg" alt="Bathroom Mirror and Sink"/>
         </div>
-        <div class="span4">
-            <div class="img-polaroid">
-                <img src="/images/1flat300x300/6.jpg" alt="Bathroom Shower"/>
-            </div>
+    </div>
+    <div class="span4">
+        <div class="img-polaroid">
+            <img src="/images/1flat300x300/6.jpg" alt="Bathroom Shower"/>
         </div>
-</div>
+    </div>
+</figure>
