--- a/views/contact.html
+++ b/views/contact.html
@@ -26,7 +26,8 @@
         <span>{{#__}}region{{/__}}: </span><span itemprop="addressRegion">{{#__}}Dobrich{{/__}}</span><br>
         <span>{{#__}}country{{/__}}: </span><span itemprop="addressCountry">{{#__}}Bulgaria{{/__}}</span><br>
         <span>{{#__}}telephone{{/__}}: </span><a href="tel:+359 888731414" itemprop="telephone">+359 888 73 14 14</a><br>
-        <span>{{#__}}email{{/__}}: </span><a href="mailto:kontakti@house-sezoni.com" itemprop="email">kontakti@house-sezoni.com</a>
+        <span>{{#__}}email{{/__}}: </span><a href="mailto:kontakti@house-sezoni.com" itemprop="email">kontakti@house-sezoni.com</a><br>
+        <span>{{#__}}openinghours{{/__}}: </span><time itemprop="openingHours" datetime="Mo-Su">Monday through Sunday, all day</time>
     </address>
   </div>
   <div class="span5 fb-holder">
