--- a/views/flat2photos.html
+++ b/views/flat2photos.html
@@ -1,33 +1,33 @@
-<div class="row-fluid">
-    <div class="img-polaroid img-polaroid-main">
-        <img src="/images/960x340/14.jpg" alt="Hotel Entrance" />
+<section class="row-fluid" itemscope itemtype="http://schema.org/Hotel">
+    <div class="img-polaroid img-polaroid-main" itemscope itemtype="http://schema.org/ImageObject">
+        <img src="/images/960x340/14.jpg" alt="Hotel Entrance" itemprop="contentUrl" />
     </div>
-</div>
-<h2 class="row-fluid">{{#__}}flat2photos{{/__}}</h2>
-<div class="row-fluid">
-        <div class="span4">
+    <h2>{{#__}}flat2photos{{/__}}</h2>
+    <div itemscope itemtype="http://schema.org/ImageGallery">
+        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/1.jpg" alt="2 Single Beds" />
+                <img src="/images/2flat300x300/1.jpg" alt="2 Single Beds" itemprop="http://schema.org/image" />
             </div>
         </div>
-        <div class="span4">
+        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/2.jpg" alt="Wardrobe and TV Set"/>
+                <img src="/images/2flat300x300/2.jpg" alt="Wardrobe and TV Set" itemprop="http://schema.org/image" />
             </div>
         </div>
-        <div class="span4">
+        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/3.jpg" alt="Couch and Table"/>
+                <img src="/images/2flat300x300/3.jpg" alt="Couch and Table" itemprop="http://schema.org/image" />
             </div>
         </div>
-        <div class="span4">
+        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/4.jpg" alt="Mirror and Plant"/>
+                <img src="/images/2flat300x300/4.jpg" alt="Mirror and Plant" itemprop="http://schema.org/image"/>
             </div>
         </div>
-        <div class="span4">
+        <div class="span4" itemprop="associatedMedia" itemscope itemtype="MediaObject">
             <div class="img-polaroid">
-                <img src="/images/2flat300x300/5.jpg" alt="Bathroom Mirror and Sink"/>
+                <img src="/images/2flat300x300/5.jpg" alt="Bathroom Mirror and Sink" itemprop="http://schema.org/image" />
             </div>
         </div>
-</div>
+    </div>
+</section>
