Removed schema.org from contact.html - see http://1stopit.blogspot.co.uk/2013/09/describing-package-tours-with-schemaorg.html

--- a/views/contact.html
+++ b/views/contact.html
@@ -1,10 +1,10 @@
 <div id="fb-root"></div>
-<section class="row-fluid" itemscope itemtype="http://schema.org/Hotel">
-    <figure class="img-polaroid img-polaroid-main" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+<section class="row-fluid">
+    <figure class="img-polaroid img-polaroid-main">
         <img src="/images/960x340/13.jpg" alt="Garden Flower Pot"/>
     </figure>
   <h2>{{#__}}contact{{/__}}</h2>
-  <p itemprop="location" itemscope itemtype="http://schema.org/Place">
+  <p>
     <span itemprop="description">
       {{#__}}contactmaindesc{{/__}}
     </span>
@@ -15,20 +15,17 @@
   </form>
   <div class="span5 contact-details">
     <h2>{{#__}}contactdetails{{/__}}</h2>
-    <div itemprop="founder" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="jobTitle">{{#__}}Hotel Owner{{/__}}: </span>
-        <span itemprop="name">{{#__}}kiriltrifonov{{/__}}</span>
-    </div>
-    <address itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+        <span>{{#__}}hotelowner{{/__}}: {{#__}}kiriltrifonov{{/__}}</span>
+    <address>
         <span>{{#__}}housenumber{{/__}}: 47</span><br>
-        <span>{{#__}}street{{/__}}: </span><span itemprop="streetAddress">3 {{#__}}Street{{/__}}</span><br>
-        <span>{{#__}}place{{/__}}: </span><span itemprop="addressLocality">{{#__}}Albena{{/__}}</span><br>
-        <span>{{#__}}region{{/__}}: </span><span itemprop="addressRegion">{{#__}}Dobrich{{/__}}</span><br>
-        <span>{{#__}}country{{/__}}: </span><span itemprop="addressCountry">{{#__}}Bulgaria{{/__}}</span><br>
-        <span>{{#__}}telephone{{/__}}: </span><a href="tel:+359 888731414" itemprop="telephone">+359 888 73 14 14</a><br>
-        <span>{{#__}}email{{/__}}: </span><a href="mailto:kontakti@house-sezoni.com" itemprop="email">kontakti@house-sezoni.com</a>
+        <span>{{#__}}street{{/__}}: 3 {{#__}}Street{{/__}}</span><br>
+        <span>{{#__}}place{{/__}}: {{#__}}Albena{{/__}}</span><br>
+        <span>{{#__}}region{{/__}}: {{#__}}Dobrich{{/__}}</span><br>
+        <span>{{#__}}country{{/__}}: {{#__}}Bulgaria{{/__}}</span><br>
+        <span>{{#__}}telephone{{/__}}: </span><a href="tel:+359 888731414">+359 888 73 14 14</a><br>
+        <span>{{#__}}email{{/__}}: </span><a href="mailto:kontakti@house-sezoni.com">kontakti@house-sezoni.com</a>
     </address>
-    <span>{{#__}}openinghours{{/__}}: </span><time itemprop="openingHours" datetime="Mo-Su">Monday through Sunday, all day</time>
+    <span>{{#__}}openinghours{{/__}}: </span><time>Monday through Sunday, all day</time>
   </div>
   <div class="span5 fb-holder">
     <div class="fb-like-box" data-href="https://www.facebook.com/pages/%D0%9A%D1%8A%D1%89%D0%B0-%D0%B7%D0%B0-%D0%B3%D0%BE%D1%81%D1%82%D0%B8-%D0%A1%D0%95%D0%97%D0%9E%D0%9D%D0%98-%D0%BA%D0%BA%D0%90%D0%BB%D0%B1%D0%B5%D0%BD%D0%B0/1405059436417534" data-width="300" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
