--- a/views/flat1photos.html
+++ b/views/flat1photos.html
@@ -1,37 +1,37 @@
 <div class="row-fluid">
-    <figure class="img-polaroid img-polaroid-main" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+    <figure class="img-polaroid img-polaroid-main">
         <img src="/images/960x340/3.jpg" alt="Hotel Entrance" />
     </figure>
 </div>
 <h2 class="row-fluid">{{#__}}flat1photos{{/__}}</h2>
 <figure class="row-fluid">
     <div class="span4">
-        <div class="img-polaroid" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+        <div class="img-polaroid">
             <img src="/images/1flat300x300/1.jpg" alt="Double Bed" />
         </div>
     </div>
     <div class="span4">
-        <div class="img-polaroid" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+        <div class="img-polaroid">
             <img src="/images/1flat300x300/2.jpg" alt="Entrance View"/>
         </div>
     </div>
     <div class="span4">
-        <div class="img-polaroid" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+        <div class="img-polaroid">
             <img src="/images/1flat300x300/3.jpg" alt="Mirror and TV Set"/>
         </div>
     </div>
     <div class="span4">
-        <div class="img-polaroid" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+        <div class="img-polaroid">
             <img src="/images/1flat300x300/4.jpg" alt="Sofa and Windows"/>
         </div>
     </div>
     <div class="span4">
-        <div class="img-polaroid" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+        <div class="img-polaroid">
             <img src="/images/1flat300x300/5.jpg" alt="Bathroom Mirror and Sink"/>
         </div>
     </div>
     <div class="span4">
-        <div class="img-polaroid" itemprop="photo" itemscope itemtype="http://schema.org/Photograph">
+        <div class="img-polaroid">
             <img src="/images/1flat300x300/6.jpg" alt="Bathroom Shower"/>
         </div>
     </div>
